# dumbkas_be.rs

./: .gitignore  Cargo.toml  diesel.toml  docker-compose.yaml  package.json
migrations/2024-11-15-054451_user/: down.sql  up.sql
migrations/2024-11-15-054456_transaction/: down.sql  up.sql
migrations/2024-11-15-054504_wallets/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: db.rs
src/middlewares/: auth_middleware.rs
src/modules/: mod.rs
src/modules/transactions/: mod.rs  transaction_handler.rs  transaction_model.rs
src/modules/users/: mod.rs  user_handler.rs  user_model.rs
src/utils/: api_response.rs  jwt.rs  mod.rs
