[package]
name = "dumbkasrusted"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = {version = "0.4.38", features = ["serde"]}
diesel = { version = "2.1.0", features = ["postgres","uuid","r2d2","chrono","serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1", features = ["serde"] }
